syntax = "proto3";

package graph;

service GraphService {

    rpc AddPersonNode (AddPersonNodeRequest) returns (AddPersonNodeResponse) {}
    rpc AddGameNode (AddGameNodeRequest) returns (AddGameNodeResponse);
    rpc AddEdge (AddEdgeRequest) returns (AddEdgeResponse);
    rpc RemoveEdge (RemoveEdgeRequest) returns (RemoveEdgeResponse);
    rpc GetEdges (GetEdgesRequest) returns (GetEdgesResponse);
    rpc UpdateUsers (UpdateUsersRequest) returns (stream UpdateUsersResponse);
}

message Person {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
}

message Game {
    string id = 1;
    string title = 2;
    string description = 3;
}

message Edge {
    string id = 1;
    string person_full_name = 2;
    string game_title = 3;
    string person_id = 4;
    string game_id = 5;
}

message AddPersonNodeRequest {
    Person person = 1;
}

message AddPersonNodeResponse {
    string person_id = 1;
}

message AddGameNodeRequest {
    Game game = 1;
}

message AddGameNodeResponse {
    string game_id = 1;
}

message AddEdgeRequest {
    Edge edge = 1;
}

message AddEdgeResponse {
    Edge edge = 1;
}

message RemoveEdgeRequest {
    Edge edge = 1;
}

message RemoveEdgeResponse {
    bool is_succeed = 1;
}

message GetEdgesRequest {}

message GetEdgesResponse {
    repeated Edge edge = 1;
}

message EdgeInfo {
    Edge edge = 1;
    bool is_removed = 2;
}

message UpdateUsersRequest {}

message UpdateUsersResponse {
    EdgeInfo edge_info = 1;
}